# ai-cyber-lab

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  laboratory_report.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
apps/ui/: main.py
ctf-recon-tool/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  proxy.js  tsconfig.json  vitest.config.js
data/: aicl_workbench.db
docs/: FREE_TOOLS_STACK.md  FUTURE_IMPROVEMENTS.md  HOW_TO_USE.md  PILOT_OFFER.md  ROBUSTNESS_NEXT_STEPS.md  TESTING_ROADMAP.md  TOOL_PROFILE_INSPIRATION.md  USAGE_PLAYBOOK.md  index.md
infra/: docker-compose.yml
libs/: circuit.py  command_planner.py  errors.py  exporter.py  graph_backend.py  job_worker.py  logs.py  playbooks.py  proposals.py  sessions.py  trace.py  workbench_db.py
scripts/: aicl.sh  bootstrap.sh  check_changelog.py  collect_troubleshoot_bundle.sh  pilot_roi.py  run_dev.sh  run_prompt_regression.py  smoke_compose.sh  start_pentest_target.sh  verify_all.sh
tests/: test_api_contracts.py  test_cli_exec_backends.py  test_command_planner.py  test_log_maintenance.py  test_note_schema_validation.py  test_parsers.py  test_pentest_agent.py  test_playbooks.py  test_playbooks_metrics_db.py  test_report_generation.py  test_report_parsing.py  test_tool_exec_api.py  test_ui_pages.py  test_workbench_api.py
(+484 files in other folders)
