[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cyber-lab"
version = "0.1.0"
description = "Segmented multi-agent cyber lab orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.33.0",
  "langgraph>=0.2.60",
  "pydantic>=2.10.0",
  "jsonschema>=4.23.0",
  "python-multipart>=0.0.20",
  "qdrant-client>=1.12.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.1",
  "docker>=7.1.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.3.0"
]
observability = [
  "langfuse>=2.60.2"
]

[tool.setuptools]
packages = [
  "apps",
  "apps.orchestrator",
  "apps.agents",
  "apps.tool_exec",
  "apps.ui",
  "libs",
  "libs.tools",
  "libs.tools.parsers",
  "libs.tools.capture",
  "libs.memory",
  "libs.docs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
